--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description " content ="Love running club for runners in Dublin">
+    <meta name="keywords" content="love running, runners in dublin, runners club dublin ">
+    <title>Love running Dublin website</title>
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Hello World</h1>
 </body>
 </html>
