Added Basic Header Structure : Navigation & Logo

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description " content ="Love running club for runners in Dublin">
+    <meta name="description " content="Love running club for runners in Dublin">
     <meta name="keywords" content="love running, runners in dublin, runners club dublin ">
     <title>Love running Dublin website</title>
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href= "#">Sign Up</a></li>
+            </ul>
+        </nav>
+        <section>Navigation </section>
+        <section> Logo Hero Image</section>
+    </header>
+    <section> Mid Content:Club Ethos</section>
+    <section>git Running locations, distances & time</section>
+    <footer> Footer Content:
+        Social Media Links
+        Copyright Info
+        Company Details
+    </footer>
 </body>
+
 </html>
