style navigation link

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-        <nav>
+        <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Signup</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href= "#">Sign Up</a></li>
+                <li><a href= "#" class="active">Home</a></li>
             </ul>
-        </nav>
-        <section>Navigation </section>
+        </nav>     
         <section> Logo Hero Image</section>
     </header>
     <section> Mid Content:Club Ethos</section>
